Remove unused import of render.

--- a/public/icons/index.html
+++ b/public/icons/index.html
@@ -92,7 +92,7 @@
   </body>
 
   <script type="module">
-    import { render, html } from 'https://unpkg.com/uhtml?module';
+    import { html } from 'https://unpkg.com/uhtml?module';
 
     fetch(
       `https://api.github.com/repos/geolytix/xyz/contents/public/icons?ref=development`,
